more footer fixes; awkward gap closed.

--- a/style.css
+++ b/style.css
@@ -331,7 +331,7 @@ footer .copy {
     min-height: 100%;
     height: auto !important;
     height: 100%;
-    margin-bottom: 300px;
+    margin-bottom: 100px;
 }
 
 img.social {
